examples/095_network_policies/manifests/net-test-coherence-server.yaml
apiVersion: v1
kind: Service
metadata:
  name: net-test-coherence-server
spec:
  selector:
    coherenceCluster: net-test
    coherenceComponent: coherencePod
    coherenceDeployment: net-test
    coherenceRole: net-test-server
  ports:
    - port: 9612
      name: metrics
      protocol: TCP
    - port: 30000
      name: management
      protocol: TCP
    - port: 6676
      name: health
      protocol: TCP
    - port: 7574
      name: clusterport
      protocol: TCP
    - port: 7575
      name: unicast1
      protocol: TCP
    - port: 7576
      name: unicast2
      protocol: TCP
    - port: 7
      name: echo
      protocol: TCP
---
apiVersion: v1
kind: Pod
metadata:
  name: net-test-coherence-server
  labels:
    coherenceCluster: net-test
    coherenceComponent: coherencePod
    coherenceDeployment: net-test
    coherenceRole: net-test-server
spec:
  containers:
  - name: net-test
    image: container-registry.oracle.com/middleware/coherence-operator:3.6.0
    ports:
    - containerPort: 9612
      name: metrics
      protocol: TCP
    - containerPort: 30000
      name: management
      protocol: TCP
    - containerPort: 6676
      name: health
      protocol: TCP
    - containerPort: 7574
      name: clusterport
      protocol: TCP
    - containerPort: 7575
      name: unicast1
      protocol: TCP
    - containerPort: 7576
      name: unicast2
      protocol: TCP
    - containerPort: 7
      name: echo
      protocol: TCP
    command:
      - /files/runner
    args:
      - net-test
      - server
