examples/095_network_policies/manifests/net-test-operator-server.yaml
apiVersion: v1
kind: Service
metadata:
  name: net-test-operator-server
spec:
  selector:
    app.kubernetes.io/name: coherence-operator
    app.kubernetes.io/instance: coherence-operator-manager
    app.kubernetes.io/version: "3.6.1"
    app.kubernetes.io/component: manager
    app.kubernetes.io/part-of: coherence-operator
    coherenceNetTest: server
  ports:
    - port: 8000
      name: operator-rest
      targetPort: operator
      protocol: TCP
---
apiVersion: v1
kind: Pod
metadata:
  name: net-test-operator-server
  labels:
    app.kubernetes.io/name: coherence-operator
    app.kubernetes.io/instance: coherence-operator-manager
    app.kubernetes.io/version: "3.6.1"
    app.kubernetes.io/component: manager
    app.kubernetes.io/part-of: coherence-operator
    coherenceNetTest: server
spec:
  containers:
  - name: net-test
    image: container-registry.oracle.com/middleware/coherence-operator:3.6.1
    ports:
    - containerPort: 8000
      name: operator
      protocol: TCP
    command:
      - /files/runner
    args:
      - net-test
      - server
