examples/095_network_policies/manifests/allow-extend-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: coherence-extend-egress
spec:
  podSelector:
    matchLabels:
      coherence.oracle.com/extendClient: "true"
  policyTypes:
    - Ingress
  egress:
    - to:
      - namespaceSelector: { }
        podSelector:
          matchLabels:
            coherenceComponent: coherencePod
      ports:
        - port: extend
          protocol: TCP
        - port: extend-atomics
          protocol: TCP
