examples/095_network_policies/manifests/allow-extend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: coherence-extend-ingress
spec:
  podSelector:
    matchLabels:
      coherenceComponent: coherencePod
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector: {}
          podSelector:
            matchLabels:
              coherence.oracle.com/extendClient: "true"
      ports:
        - port: extend
          protocol: TCP
        - port: extend-atomics
          protocol: TCP
