examples/095_network_policies/manifests/allow-grpc-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: coherence-grpc-egress
spec:
  podSelector:
    matchLabels:
      coherence.oracle.com/grpcClient: "true"
  policyTypes:
    - Ingress
  egress:
    - to:
      - namespaceSelector: { }
        podSelector:
          matchLabels:
            coherenceComponent: coherencePod
      ports:
        - port: grpc
          protocol: TCP
