examples/095_network_policies/manifests/allow-operator-rest-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: coherence-operator-rest-ingress
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: coherence-operator
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector: { }
          podSelector:
            matchLabels:
              coherenceComponent: coherencePod
      ports:
        - port: operator
          protocol: TCP
